# gensie

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yml  mkdocs.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: submission.md
.github/workflows/: deploy.yml
data/dev/: cultural_entities_001.json  cultural_entities_002.json  cultural_extraction_001.json  cultural_extraction_002.json  cultural_literature_001.json  cultural_literature_002.json  cultural_literature_003.json  cultural_literature_004.json  cultural_literature_005.json  cultural_literature_006.json  cultural_literature_007.json  cultural_literature_008.json  cultural_literature_009.json  cultural_literature_010.json  cultural_media_001.json  cultural_media_002.json  cultural_media_003.json  cultural_media_004.json  cultural_media_005.json  cultural_media_006.json  cultural_media_007.json  cultural_media_008.json  cultural_media_009.json  cultural_media_010.json  cultural_monuments_1.json  cultural_monuments_2.json  cultural_monuments_3.json  cultural_monuments_4.json  cultural_monuments_5.json  dev.jsonl  environmental_ecology_001.json  environmental_ecology_002.json  environmental_ecology_003.json  environmental_ecology_004.json  environmental_ecology_005.json  environmental_ecology_006.json  environmental_ecology_007.json  environmental_ecology_008.json  environmental_ecology_009.json  environmental_ecology_010.json  (+110 more)
data/starter/: cultural_entities_002.json  cultural_media_001.json  cultural_media_002.json  cultural_media_003.json  cultural_media_004.json  cultural_media_005.json  legal_entities_001.json  legal_extraction_001.json  legal_extraction_002.json  legal_legislation_001.json  legal_legislation_002.json  legal_legislation_003.json  legal_legislation_004.json  legal_legislation_005.json  medical_drug_001.json  medical_drug_002.json  medical_drug_003.json  medical_drug_004.json  medical_drug_005.json  (+10 more)
docs/: description.md  index.md  results.md  self-evaluation.md  starter-kit.md  submission.md  working-notes.md
results/: baseline_deepseek-r1-distill-qwen-32b.json  baseline_gemini3_flash.json  baseline_gpt_oss_20b.json  baseline_llama_3.1_8b.json  baseline_llama_3.1_8b_dev.json  baseline_llama_3_3b.json  baseline_llama_4.json  baseline_mistral_small_3.1_24b_instruct_2503.json  baseline_qwen2.5-3b-instruct.json  baseline_qwen2.5-7b-instruct.json.json  baseline_qwen2.5_32b_instruct.json  baseline_qwen2.5_72b_instruct_awq.json  baseline_qwen3_30b_a3b_instruct_2507.json  baseline_qwen3_30b_a3b_instruct_2507_fp8.json
src/gensie/: agent.py  (+10 more)
tests/: test_core.py  test_evaluator_v2.py  test_metrics_spec.py  test_ranking.py  test_server.py  test_slurm_cli.py  test_slurm_launcher.py  test_slurm_schema.py  test_slurm_specs.py  test_timing.py  test_token_usage.py  test_usage.py
(+191 files in other folders)
