[project]
name = "gensie"
version = "0.1.0"
description = "GenSIE - General-purpose Schema-guided Information Extraction"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lingo-ai>=1.3",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "openai>=1.50.0",
    "typer[all]>=0.12.5",
    "rich>=13.9.0",
    "sentence-transformers>=3.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.5.0"
]

[dependency-groups]
dev = [
    "beaver-db>=1.3.0",
    "pytest>=9.0.2",
    "rich>=14.3.1",
    "streamlit>=1.53.1",
    "typer>=0.21.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-material-extensions>=1.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
gensie = "gensie.cli:app"
